test/tests/bad/undef-type_0.carth
;; UndefType

(data Foo (Foo Bar))
